--- a/Web_T-REC/Web_T-REC.csproj
+++ b/Web_T-REC/Web_T-REC.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>Web_T_REC</RootNamespace>
     <AssemblyName>Web_T-REC</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -345,7 +345,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>62944</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:62944/</IISUrl>
+          <IISUrl>http://localhost/Web_T-REC</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
