--- a/Web_T-REC/Web.config
+++ b/Web_T-REC/Web.config
@@ -10,10 +10,10 @@
   </configSections>
   <connectionStrings>
     <!--<add name="ConnString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=T-REC;User ID=sa;Password=P@ssw0rd" providerName="System.Data.SqlClient"/>-->
-    <add name="ConnString" connectionString="Data Source=(local);Initial Catalog=T-REC;User ID=sa;Password=abc123$1" providerName="System.Data.SqlClient" />
-    <add name="Entities" connectionString="metadata=res://*/DataModel.Model.csdl|res://*/DataModel.Model.ssdl|res://*/DataModel.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=T-REC;user id=sa;password=abc123$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
-    <!--<add name="ConnString" connectionString="Data Source=(local);Database=T-REC;Trusted_Connection=Yes;"/>-->
+    <!--<add name="ConnString" connectionString="Data Source=(local);Initial Catalog=T-REC;User ID=sa;Password=abc123$1" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/DataModel.Model.csdl|res://*/DataModel.Model.ssdl|res://*/DataModel.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=T-REC;user id=sa;password=abc123$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ConnString" connectionString="Data Source=NARINCHODE-PC;Database=T-REC;Trusted_Connection=Yes; initial catalog=T-REC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
+    <add name="Entities" connectionString="metadata=res://*/DataModel.Model.csdl|res://*/DataModel.Model.ssdl|res://*/DataModel.Model.msl;provider=System.Data.SqlClient;provider connection string='data source=NARINCHODE-PC;initial catalog=T-REC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <sessionState mode="InProc" cookieless="false" timeout="10" />
@@ -27,10 +27,10 @@
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <pages controlRenderingCompatibilityVersion="4.0">
-      
-    <controls>
+      <controls>
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
-      </controls></pages>
+      </controls>
+    </pages>
     <authentication mode="Forms">
       <forms loginUrl="Login.aspx" timeout="2880" />
     </authentication>
