--- a/Web_T-REC/Web_T-REC.csproj
+++ b/Web_T-REC/Web_T-REC.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>Web_T_REC</RootNamespace>
     <AssemblyName>Web_T-REC</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -94,6 +94,7 @@
     <Content Include="bootstrap\js\jquery.js" />
     <Content Include="bootstrap\js\npm.js" />
     <Content Include="Customer.aspx" />
+    <Content Include="DataModel\Model.edmx.sql" />
     <Content Include="Default.aspx" />
     <Content Include="Employee.aspx" />
     <Content Include="Equiptment.aspx" />
@@ -144,6 +145,12 @@
     <Compile Include="Customer.aspx.designer.cs">
       <DependentUpon>Customer.aspx</DependentUpon>
     </Compile>
+    <Compile Include="DataModel\Customer.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\Department.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataModel\Employees.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -165,6 +172,9 @@
     <Compile Include="DataModel\JobPosition.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataModel\JobPosition_Emp.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataModel\Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -180,7 +190,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DataModel\Packages.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataModel\Roles.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\sp_helpdiagrams_Result.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\sysdiagrams.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="DataModel\Users.cs">
@@ -345,7 +367,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>62944</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/Web_T-REC</IISUrl>
+          <IISUrl>http://localhost:62944/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
