--- a/Web_T-REC/Web_T-REC.csproj
+++ b/Web_T-REC/Web_T-REC.csproj
@@ -104,6 +104,7 @@
     <Content Include="JobPosition.aspx" />
     <Content Include="JobQ.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Package.aspx" />
     <Content Include="QuotationDetail.aspx" />
     <Content Include="QuotationList.aspx" />
     <Content Include="Script\GridView.js" />
@@ -288,6 +289,13 @@
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
+    <Compile Include="Package.aspx.cs">
+      <DependentUpon>Package.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Package.aspx.designer.cs">
+      <DependentUpon>Package.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuotationDetail.aspx.cs">
       <DependentUpon>QuotationDetail.aspx</DependentUpon>
@@ -353,7 +361,6 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
-    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
